kubernetes/apps/media/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    name: jellyfin
  ports:
    - protocol: TCP
      port: 8096
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jellyfin
  template:
    metadata:
      labels:
        name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: movies
              mountPath: /movies
            - name: shows
              mountPath: /shows
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 1000m
              memory: 500Mi
      volumes:
        # - name: config
        #   persistentVolumeClaim:
        #     claimName: jellyfin-config-pvc
        - name: config
          hostPath:
            path: /home/player/kube_data/jellyfin/config
            type: Directory
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
        - name: shows
          persistentVolumeClaim:
            claimName: shows-pvc
      nodeSelector:
        kubernetes.io/hostname: saka
