kubernetes/apps/media/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    name: sonarr
  ports:
    - protocol: TCP
      port: 8989
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: sonarr-pvc
#   namespace: media
#   annotations:
#     nfs.io/storage-path: sonarr
# spec:
#   storageClassName: kubedata
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 100Mi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonarr
  template:
    metadata:
      labels:
        name: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrent-downloads
              mountPath: /downloads
            - name: shows
              mountPath: /shows
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              cpu: 1000m
              memory: 300Mi
      volumes:
        # - name: config
        #   persistentVolumeClaim:
        #     claimName: sonarr-pvc
        - name: torrent-downloads
          persistentVolumeClaim:
            claimName: torrent-pvc
        - name: shows
          persistentVolumeClaim:
            claimName: shows-pvc
        - name: config
          hostPath:
            path: /home/player/kube_data/sonarr
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: saka
