kubernetes/apps/media/transmission.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    name: transmission
  ports:
    - protocol: TCP
      port: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      name: transmission
  template:
    metadata:
      labels:
        name: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:latest
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 1000m
              memory: 50Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: transmission-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: torrent-pvc
