kubernetes/apps/media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: transmission.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: transmission
                port:
                  number: 9091
    - host: jellyfin.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
    - host: jellyseerr.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
    - host: radarr.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: radarr
                port:
                  number: 7878
    - host: sonarr.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
    - host: prowlarr.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
